[package]
name = "jtaskstats"
version = "0.2.0"
authors = ["Yuto Kawamura <kawamuray.dadada@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Linux taskstats applied for JVM threads"
repository = "https://github.com/kawamuray/jtaskstats"
readme = "README.md"

[dependencies]
clap = "2.33.1"
tempfile = "3.1.0"
linux-taskstats = "0.1.3"
regex = "1.7.1"
